# airstrike

./: .env.example  Cargo.toml  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  REBRANDING_SUMMARY.md  docker-compose.dev.yml  docker-compose.yml  package.json  run.sh  vite.config.ts
.github/workflows/: docker.yml
airstrike-engine/: Cargo.toml
airstrike-engine/src/core/: aircraft.rs  aircraft_specs.rs  airport.rs  diplomacy.rs  event_bus.rs  ew.rs  mod.rs  radar.rs  spatial_index.rs  weapon.rs
airstrike-engine/src/ui/: mod.rs  tactical.rs  tile_manager.rs
docs/plans/: 2026-04-04-engine-foundation-plan.md  2026-04-04-frontend-mouse-hud-design.md  2026-04-04-phase2-entities-physics.md  2026-04-04-stratosphere-game-design.md  2026-04-04-workspace-split.md
src/: App.tsx  index.css  main.rs
src/core/: SimulationEngine.ts  aircraft.rs  mod.rs
src/plugins/: AircraftRegistry.ts  MissileRegistry.ts
src/simulation/: world.rs
src/systems/: AIDecisionSystem.ts
src/types/: entities.ts  geopolitics.ts
src/ui/: camera.rs  grid.rs  mod.rs  tactical.rs
src/ui/components/: DiplomacyMatrix.tsx  GlobalMonitor.tsx  ObjectivesTracker.tsx  ResourcesDisplay.tsx  ScrambleModal.tsx  TacticalMap.tsx  WarRoomDashboard.tsx
src/ui/hooks/: useGameEngine.ts
src/utils/: physicsUtils.ts
stratosphere/: Cargo.toml
stratosphere/src/: main.rs
stratosphere/src/scenes/: main_menu.rs  mode_select.rs  sandbox_settings.rs
stratosphere/src/simulation/: missile.rs  mod.rs  world.rs
stratosphere/src/ui/: aircraft_detail_panel.rs  airport_layer.rs  base_panel.rs  ew_panel.rs  (+4 more)
