[workspace]
resolver = "2"
members = [
    "airstrike-engine",
    "stratosphere",
]

[workspace.dependencies]
sdl2        = { version = "0.37", features = ["image", "ttf"] }
glam        = "0.24"
ureq        = "2"
image       = { version = "0.25", default-features = false, features = ["png"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
dirs        = "5"
